--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,5 @@ build/
 
 ### VS Code ###
 .vscode/
+*/application.properties
+ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
