--- a/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.application.name=
 #spring.datasource.url=jdbc:h2:mem:dhm74
 #spring.h2.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/dhm74
-spring.datasource.username=root
-spring.datasource.password=rootuser1
+spring.datasource.username=myuser
+spring.datasource.password=mypassword
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show_sql=true
 #debug=true
 server.port=9001
