--- a/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=
-#https://localhost:8080/h2-console
-#spring.datasource.url=jdbc:h2:mem:dhm74
-#spring.h2.console.enabled=true
+spring.profiles.active=tim
 spring.datasource.url=jdbc:mysql://localhost:3306/dhm74
-spring.datasource.username=root
-spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show_sql=true
-#debug=true
 server.port=9001
+management.endpoints.web.exposure.include=*
+logging.file.name=infoapp
