--- a/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=
+spring.application.name=ShopForHome_Users
 spring.profiles.active = favian
 #https://localhost:8080/h2-console
 #spring.datasource.url=jdbc:h2:mem:dhm74
