--- a/ShopForHome_Cart/ShopForHome_Cart/src/main/resources/application.properties
+++ b/ShopForHome_Cart/ShopForHome_Cart/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-spring.application.name=ShopForHome_Users
-spring.profiles.active=
+spring.application.name=ShopForHome_Cart
 #https://localhost:8080/h2-console
 #spring.datasource.url=jdbc:h2:mem:dhm74
 #spring.h2.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/dhm74
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=rootuser1
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show_sql=true
 #debug=true
-server.port=9001
+server.port=9007
