--- a/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
@@ -1,15 +1,3 @@
 spring.application.name=ShopForHome_Users
-spring.profiles.active=
-#https://localhost:8080/h2-console
-#spring.datasource.url=jdbc:h2:mem:dhm74
-#spring.h2.console.enabled=true
-spring.datasource.url=jdbc:mysql://localhost:3306/dhm74
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=rootuser1
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show_sql=true
-#debug=true
+spring.profiles.active=isabell
 server.port=9001
-management.endpoints.web.exposure.include=*
-logging.file.name=infoapp
