--- a/ShopForHome_Cart/src/main/resources/application-tim.properties
+++ b/ShopForHome_Cart/src/main/resources/application-tim.properties
@@ -1,8 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/dhm74
 spring.datasource.username=root
-spring.datasource.password=rootuser1
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show_sql=true
-#debug=true
 management.endpoints.web.exposure.include=*
 logging.file.name=infoapp
