--- a/ShopForHome_Carts/src/main/resources/application.properties
+++ b/ShopForHome_Carts/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.application.name=ShopForHome_Cart
+spring.application.name=ShopForHome_Carts
 spring.profiles.active=isabell
 server.port=9003
