--- a/ShopForHome_Products/src/main/resources/application.properties
+++ b/ShopForHome_Products/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=ShopForHome_Products
 spring.profiles.active = isabell
 server.port=9005
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceURL.default=http://localhost:8761/eureka/
+spring.cloud.gateway.discovery.locator.enabled=true
