--- a/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ShopForHome_Users
 spring.profiles.active=favian
 server.port=9001
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceURL.default=http://localhost:8761/eureka/
-spring.cloud.gateway.discovery.locator.enabled=true
+#eureka.client.registerWithEureka=true
+#eureka.client.fetchRegistry=true
+#eureka.client.serviceURL.default=http://localhost:8761/eureka/
+#spring.cloud.gateway.discovery.locator.enabled=true
