--- a/ShopForHome_Orders/src/main/resources/application.properties
+++ b/ShopForHome_Orders/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=ShopForHome_Orders
-spring.profiles.active=favian
+spring.profiles.active=isabell
 server.port=9020
-
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceURL.default=http://localhost:8761/eureka/
+spring.cloud.gateway.discovery.locator.enabled=true
