--- a/ShopForHome_Products/src/main/resources/application-tim.properties
+++ b/ShopForHome_Products/src/main/resources/application-tim.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dhm74
+spring.datasource.url=jdbc:mysql://localhost:3306/shopforhome
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
