feign client funcaitonality added

--- a/ShopForHome_Orders/src/main/resources/application.properties
+++ b/ShopForHome_Orders/src/main/resources/application.properties
@@ -1,11 +1,8 @@
 spring.application.name=ShopForHome_Orders
-<<<<<<< HEAD
-spring.profiles.active=tim
-=======
 spring.profiles.active=isabell
->>>>>>> db35349d1adf895dae7cf5050b99100859696382
 server.port=9020
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceURL.default=http://localhost:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
+feign.client.config.airport.service.name=ShopForHomeUsers
