--- a/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-spring.application.name=ShopForHome_Users
-<<<<<<< HEAD
-spring.profiles.active=tim
-server.port=9001
-=======
+spring.application.name=ShopForHomeUsers
 spring.profiles.active=isabell
 server.port=9001
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 eureka.client.serviceURL.default=http://localhost:8761/eureka/
 spring.cloud.gateway.discovery.locator.enabled=true
->>>>>>> db35349d1adf895dae7cf5050b99100859696382
+
