application name change

--- a/ShopForHome_Orders/src/main/resources/application.properties
+++ b/ShopForHome_Orders/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ShopForHome_Orders
+spring.application.name=ShopForHomeOrders
 spring.profiles.active=isabell
 server.port=9020
 eureka.client.registerWithEureka=true
