--- a/frontend/shopforhome/angular.json
+++ b/frontend/shopforhome/angular.json
@@ -25,6 +25,7 @@
               "src/favicon.ico"
             ],
             "styles": [
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
