--- a/frontend/shopforhome/package.json
+++ b/frontend/shopforhome/package.json
@@ -21,6 +21,7 @@
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
+    "ngx-bootstrap": "^18.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
