--- a/ShopForHome_Users/src/main/resources/application.properties
+++ b/ShopForHome_Users/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ShopForHomeUsers
-spring.profiles.active=favian
+spring.profiles.active=tim
 server.port=9001
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
