--- a/frontend/shopforhome/package.json
+++ b/frontend/shopforhome/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.2.0",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "bootstrap": "^5.3.3",
+    "decimal.js": "^10.4.3",
     "jquery": "^3.7.1",
     "ngx-bootstrap": "^18.1.2",
     "rxjs": "~7.8.0",
