gitignore + remove logging

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,5 @@ ShopForHome_Users/ShopForHome_Users/src/main/resources/application.properties
 /.metadata/
 ShopForHome_Carts/infoapp
 ShopForHome_Users/infoapp
+ShopForHome_Carts/infoapp
+ShopForHome_Users/infoapp
