--- a/ShopForHome_Products/src/main/resources/application.properties
+++ b/ShopForHome_Products/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ShopForHomeProducts
-spring.profiles.active=favian
+spring.profiles.active=tim
 server.port=9005
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
